syntax = "proto3";

package idns.system;

message Version{
    enum SoftVersion{
        V_0_1_0  = 0;
    }
    SoftVersion version = 1;
    string name = 3;
    string description = 5;
}

/////////////////////////////

message Command{
    string service_name = 1;
    string method_name = 2;
    map<string,string> headers = 3;
    bytes data = 5;
    string nonce = 99;
}

message CommandResponse{
    int32 status = 1;
    map<string,string> headers = 3;
    bytes data = 5;
    string nonce = 99;
}

message EmptyMessage{
    
}

message U64Message{
    uint64 data = 1;
}
 
message BoolMessage{
    bool data = 1;
}

message BytesMessage{
    bytes data = 1;
}

message StringMessage{
    string data = 1;
}

message DatabaseQuery{
    string sql = 1;
    uint32 size = 2;
}

message DatabaseUpdate{
    string sql = 1;
    string args_json = 2;
}


/////////////////////////////
message WalletGetBalancesResponse{
    string address = 1;
    uint64 balance = 3;
}

message WalletBalanceTransferRequest{
    string to_address = 1;
    uint64 amount = 3;
}